<resources>
    <string name="app_name">Key Attestation</string>
    <string name="use_shizuku">Use Shizuku</string>
    <string name="use_sak">Use Knox attestation</string>
    <string name="use_strongbox">Use StrongBox</string>
    <string name="use_attest_key">Use attest key</string>
    <string name="import_attest_key">Import attest key</string>
    <string name="attest_device_props">Attest device props</string>
    <string name="id_type_serial">Attest device serial</string>
    <string name="id_type_imei">Attest device IMEI</string>
    <string name="id_type_meid">Attest device MEID</string>
    <string name="include_unique_id">Include unique ID</string>
    <string name="rkp_test">RKP test</string>
    <string name="reset">Reset</string>
    <string name="load_certs">Load from file</string>
    <string name="save_certs">Save to file</string>
    <string name="about">About</string>
    <string name="open_source_info">This software is open source under %2$s (%1$s).</string>
    <string name="install_shizuku">Install Shizuku to use ID Attestation (%s).</string>
    <string name="start_shizuku">Shizuku is not running.</string>
    <string name="bootloader_locked">Bootloader is locked</string>
    <string name="bootloader_user">Root of trust set by end user</string>
    <string name="bootloader_unlocked">Bootloader is unlocked</string>
    <string name="bootloader_unknown">Bootloader status is unknown</string>
    <string name="bootloader_summary_sw_level">This device does not support hardware-level key attestation.</string>
    <string name="cert_chain_not_trusted">Certificate chain is not trusted</string>
    <string name="cert_chain_not_trusted_summary">A certificate has been revoked or signature verification failed in the certificate chain.</string>
    <string name="unknown_root_cert">Unknown root certificate</string>
    <string name="unknown_root_cert_summary">Root certificate is not a known trusted certificate authority.</string>
    <string name="aosp_root_cert">AOSP software attestation root certificate</string>
    <string name="aosp_root_cert_summary">Private key of attestation key is well known, the certificate chain can be tampered with.</string>
    <string name="google_root_cert">Google hardware attestation root certificate</string>
    <string name="google_root_cert_summary">GMS compatible devices can use attestation key signed by Google.</string>
    <string name="google_root_cert_rkp">Google remote key provisioning</string>
    <string name="google_root_cert_rkp_summary">Remotely provisioned attestation key have stronger security and higher availability.</string>
    <string name="knox_root_cert">Samsung Knox attestation root certificate</string>
    <string name="knox_root_cert_summary">Knox attestation is signed using Samsung attestation key (SAK).</string>
    <string name="oem_root_cert">OEM root certificate</string>
    <string name="oem_root_cert_summary">This device trusts this root certificate, but it may not be trusted by others.</string>
    <string name="cert_chain">Certificate chain</string>
    <string name="cert_chain_description">Certificate chain is a list of certificates used to authenticate a key. The chain begins with the certificate of that key, and each certificate in the chain is signed by the next certificate in the chain. The chain terminates with a root certificate. The trustworthiness of the attestation depends on the root certificate of the chain.</string>
    <string name="cert_info">Certificate info</string>
    <string name="cert_subject">subject: </string>
    <string name="cert_not_before">not before: </string>
    <string name="cert_not_after">not after: </string>
    <string name="cert_error_sign">signature error: </string>
    <string name="cert_error_revoked">revoked: </string>
    <string name="cert_error_expired">expired: </string>
    <string name="provisioning_info_certs_issued">number of certs issued in last 30 days: </string>
    <string name="provisioning_info_manufacturer">manufacturer: </string>
    <string name="error_message_subtitle">Detailed messages:</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_unavailable">Unable to attest</string>
    <string name="error_unavailable_summary">
    Attest failed, adjust options in the menu and try again.
    A common reason for consistently failing to attest is the inability to use the factory provisioned attestation key,
    possibly due to a misconfigured device or a corrupt persist partition.
    </string>
    <string name="error_cant_parse_cert">Unable to parse certificate</string>
    <string name="error_cant_parse_cert_summary">
    The certificate is in the wrong format or there is a feature that is not yet supported.
    </string>
    <string name="error_strongbox_unavailable">StrongBox not available</string>
    <string name="error_strongbox_unavailable_summary">
    This device is declared to have StrongBox support but it is actually unavailable.
    </string>
    <string name="error_deviceids_unavailable">Unable to attest device ids</string>
    <string name="error_deviceids_unavailable_summary">
    This device is declared to have ID attestation support, but IDs do not exist, do not match,
    or the device can no longer attest its IDs. Adjust options in the menu and try again.
    </string>
    <string name="error_out_of_keys">No remotely provisioned keys for attestation</string>
    <string name="error_out_of_keys_summary">
    This device is not registered with the key provisioning server, or the server permanently refuses to issue keys.
    </string>
    <string name="error_out_of_keys_transient">Currently no remotely provisioned keys for attestation</string>
    <string name="error_out_of_keys_transient_summary">
    The key pool is exhausted, please retry after networking.
    If the server temporarily refuses to issue keys, check for system updates.
    </string>
    <string name="error_unavailable_transient">Currently unable to attest</string>
    <string name="error_unavailable_transient_summary">
    The problem is temporary, adjust options in the menu or try again later.
    </string>
    <string name="error_keys_not_provisioned">No attestation keys</string>
    <string name="error_keys_not_provisioned_summary">
    Unable to fetch remotely provisioned attestation keys, and no factory provisioned attestation keys.
    </string>
    <string name="error_remote_key_provisioning">Remote Key Provisioning Error</string>
    <string name="error_remote_key_provisioning_summary">
    Unable to fetch attestation key from key provisioning server.
    </string>
    <string name="rpc_hardware_info">Hardware info</string>
    <string name="rpc_hardware_info_description">
    The hardware information of remotely provisioned component.
    </string>
    <string name="rpc_version_number">Version</string>
    <string name="rpc_version_number_description">
    Implementation version of the remotely provisioned component hardware.
    The version provided here must match the version reported in the CsrPayload produced by the HAL interface.
    </string>
    <string name="rpc_author_name">Vendor</string>
    <string name="rpc_author_name_description">
    The organization name of the author of the IRemotelyProvisionedComponent implementation.
    </string>
    <string name="rpc_unique_id">Identifier</string>
    <string name="rpc_unique_id_description">
    an opaque identifier for this IRemotelyProvisionedComponent implementation.
    Each implementation must have a distinct identifier from all other implementations, and it must be consistent across all devices.
    </string>
    <string name="rkp_device_info">Device info</string>
    <string name="rkp_device_info_description">
    Device info contains information about the device that\'s signed by the IRemotelyProvisionedComponent HAL.
    These values are intended to be checked by the server to verify that the certificate signing request
    crafted by an IRemotelyProvisionedComponent HAL instance is coming from the expected device
    based on values initially uploaded during device manufacture in the factory.
    </string>
    <string name="rkp_hostname">Remote provisioning hostname</string>
    <string name="rkp_hostname_empty">Remote key provisioning disabled</string>
    <string name="attestation">Attestation</string>
    <string name="attestation_version_description"><![CDATA[<font face="sans-serif-medium">Version:</font><br>The version of the key attestation feature.]]></string>
    <string name="keymaster" translatable="false">Keymaster / KeyMint</string>
    <string name="keymaster_version_description"><![CDATA[<font face="sans-serif-medium">Version:</font><br>The version of the Keymaster or KeyMint hardware abstraction layer (HAL).]]></string>
    <string name="security_level_description"><![CDATA[<font face="sans-serif-medium">Security level:</font><br>This data structure indicates the extent to which a software feature, such as a key pair, is protected based on its location within the device.<p><ul><li gap="8sp"><font face="sans-serif-medium">Software</font><br>The logic for creating and managing the feature is implemented in the Android system. For the purposes of creating and storing key pairs, this location is less secure than the TEE but is more secure than your app\'s process space.</li><li gap="8sp"><font face="sans-serif-medium">TrustedEnvironment</font><br>The logic for creating and managing the feature is implemented in secure hardware, such as a TEE. For the purposes of creating and storing key pairs, this location is more secure because secure hardware is highly resistant to remote compromise.</li><li gap="8sp"><font face="sans-serif-medium">StrongBox</font><br>The logic for creating and managing the feature is implemented in a dedicated <a href="https://developer.android.com/training/articles/keystore#HardwareSecurityModule">hardware security module</a>. For the purposes of creating and storing key pairs, this location is more secure because it is highly resistant to remote compromise and hardware attacks against the module.</li></ul>]]></string>
    <string name="attestation_summary_format">Version: %1$s\nSecurity level: %2$s</string>
    <string name="attestation_challenge">Attestation challenge</string>
    <string name="attestation_challenge_description">Contains the challenge that was provided at key creation time. Check whether this value matches the value your server provided. Otherwise, your service might be vulnerable to replaying of old attestation certificates.</string>
    <string name="unique_id">Unique ID</string>
    <string name="unique_id_description"><![CDATA[This value identifies the device—but only for a limited period of time. It is <a href="https://source.android.com/security/keystore/attestation#unique-id">computed</a> and is only used by system apps. In all other apps, uniqueId is empty.]]></string>
    <string name="empty">(empty)</string>
    <string name="security_level_software">Software</string>
    <string name="security_level_trusted_environment">TrustedEnvironment</string>
    <string name="security_level_strongbox">StrongBox</string>
    <string name="sw_enforced" translatable="false">SW</string>
    <string name="sw_enforced_description"><![CDATA[This item is enforced by the Android system, not by the device\'s hardware.]]></string>
    <string name="tee_enforced" translatable="false">HW</string>
    <string name="tee_enforced_description"><![CDATA[This item is enforced by the device\'s hardware.]]></string>
    <string name="authorization_list">Authorization list</string>
    <string name="authorization_list_purpose">Purpose</string>
    <string name="authorization_list_algorithm">Algorithm</string>
    <string name="authorization_list_keySize">Key size</string>
    <string name="authorization_list_digest">Digests</string>
    <string name="authorization_list_padding">Padding</string>
</resources>