<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_use_shizuku"
        android:checkable="true"
        android:showAsAction="never"
        android:title="@string/use_shizuku" />

    <item
        android:id="@+id/menu_use_sak"
        android:checkable="true"
        android:showAsAction="never"
        android:title="@string/use_sak" />

    <item
        android:id="@+id/menu_use_strongbox"
        android:checkable="true"
        android:showAsAction="never"
        android:title="@string/use_strongbox" />

    <item
        android:id="@+id/menu_use_attest_key"
        android:checkable="true"
        android:showAsAction="never"
        android:title="@string/use_attest_key" />

    <item
        android:id="@+id/menu_import_attest_key"
        android:showAsAction="never"
        android:title="@string/import_attest_key" />

    <item
        android:id="@+id/menu_include_props"
        android:checkable="true"
        android:showAsAction="never"
        android:title="@string/attest_device_props" />

    <group android:id="@+id/menu_id_type_group">
        <item
            android:id="@+id/menu_id_type_serial"
            android:checkable="true"
            android:showAsAction="never"
            android:title="@string/id_type_serial" />

        <item
            android:id="@+id/menu_id_type_imei"
            android:checkable="true"
            android:showAsAction="never"
            android:title="@string/id_type_imei" />

        <item
            android:id="@+id/menu_id_type_meid"
            android:checkable="true"
            android:showAsAction="never"
            android:title="@string/id_type_meid" />
    </group>

    <item
        android:id="@+id/menu_include_unique_id"
        android:checkable="true"
        android:showAsAction="never"
        android:title="@string/include_unique_id" />

    <item
        android:id="@+id/menu_rkp_test"
        android:showAsAction="never"
        android:title="@string/rkp_test" />

    <item
        android:id="@+id/menu_reset"
        android:showAsAction="never"
        android:title="@string/reset" />

    <item
        android:id="@+id/menu_save"
        android:showAsAction="never"
        android:title="@string/save_certs" />

    <item
        android:id="@+id/menu_load"
        android:showAsAction="never"
        android:title="@string/load_certs" />

    <item
        android:id="@+id/menu_about"
        android:showAsAction="never"
        android:title="@string/about" />

</menu>
